--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
+    "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0"
   },
